# Ganghwa

./: .gitignore  CMakeLists.txt  README.md
include/: config.hpp  driver.hpp  hangle.hpp  test_target.hpp
include/element/: item_info.hpp
include/enum/: item_type.hpp
include/input/: mouse.hpp
include/manager/: font_manager.hpp  item_manager.hpp  manager.hpp  money_manager.hpp  page_manager.hpp
include/object/: button.hpp  object.hpp  text.hpp
include/page/: enforce_page.hpp  page.hpp
src/: main.cpp
src/driver/: driver.cpp
src/element/: item_info.cpp
src/enum/: item_type.cpp
src/input/: mouse.cpp
src/manager/: font_manager.cpp  item_manager.cpp  money_manager.cpp  page_manager.cpp
src/object/: button.cpp  object.cpp  text.cpp
src/page/: enforce_page.cpp  page.cpp
tests/: CMakeLists.txt
